[gd_scene load_steps=3 format=3 uid="uid://fp_arms_scene"]

[ext_resource type="Script" path="res://scripts/player/first_person_arms.gd" id="1_arms"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_skin"]
albedo_color = Color(0.85, 0.72, 0.63, 1)
roughness = 0.7
metallic = 0.0

[node name="FirstPersonArms" type="Node3D"]
script = ExtResource("1_arms")

[node name="ArmsPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, -0.3)

[node name="RightArm" type="Node3D" parent="ArmsPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.28, 0, 0)

[node name="UpperArm" type="MeshInstance3D" parent="ArmsPivot/RightArm"]
material_override = SubResource("StandardMaterial3D_skin")

[node name="Forearm" type="MeshInstance3D" parent="ArmsPivot/RightArm"]
material_override = SubResource("StandardMaterial3D_skin")

[node name="Hand" type="Node3D" parent="ArmsPivot/RightArm"]

[node name="ItemHolder" type="Node3D" parent="ArmsPivot/RightArm/Hand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.02, 0.18, -0.08)

[node name="LeftArm" type="Node3D" parent="ArmsPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.28, 0, 0)

[node name="UpperArm" type="MeshInstance3D" parent="ArmsPivot/LeftArm"]
material_override = SubResource("StandardMaterial3D_skin")

[node name="Forearm" type="MeshInstance3D" parent="ArmsPivot/LeftArm"]
material_override = SubResource("StandardMaterial3D_skin")

[node name="Hand" type="Node3D" parent="ArmsPivot/LeftArm"]
